# PhishTest_Suite

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_REVIEW_REPORT.md  README.md
backend/: .env.example  Cargo.toml  sqlx-data.json
backend/src/: main.rs
backend/src/database/: migrations.rs  mod.rs  models.rs
backend/src/handlers/: analytics.rs  auth.rs  campaign_execution.rs  campaigns.rs  mod.rs  recipients.rs  settings.rs  templates.rs  tracking.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: campaign.rs  mod.rs  recipient.rs  template.rs  user.rs
backend/src/utils/: email.rs  jwt.rs  mod.rs  password.rs  tracking.rs  user_agent.rs
database/: upgrade_tracking_fields.sql  upgrade_tracking_simple.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalyticsDashboard.tsx  CSVImporter.tsx  EmailTemplateEditor.tsx  EmptyState.tsx  ErrorBoundary.tsx  Header.tsx  Layout.tsx  ProtectedRoute.tsx  RecipientManager.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Analytics.tsx  Campaigns.tsx  Dashboard.tsx  Login.tsx  Recipients.tsx  Settings.tsx  SystemConfig.tsx  Templates.tsx
frontend/src/store/: authStore.ts
