[package]
name = "phishtest-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
dotenv = "0.15"
anyhow = "1.0"

# 安全认证
jsonwebtoken = "9.0"
bcrypt = "0.15"

# 邮件发送
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# HTTP客户端（用于追踪）
reqwest = { version = "0.11", features = ["json"] }

# 任务调度
tokio-cron-scheduler = "0.9"

# Base64编码
base64 = "0.21"

# 其他工具
regex = "1.10"
urlencoding = "2.1"